dosyalar/ingress-ati-sites.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ati-sites
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: ati.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: ati-duran1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: ati-duran2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - ati.local
    - ati-duran1.local
    - ati-duran2.local
    secretName: ati-sites-tls
